ajustes no microsserviço de inventario